# KALYX

./: CMakeLists.txt  README.md  human_chr1_22_XY_full_k16.csv  human_chr1_22_XY_full_k16.kgenome  human_kdna_library.csv  human_kdna_library.json  human_kdna_library.kglib
ReportV1/: KGENOME_REPORT.html  KGENOME_REPORT.md  report_manifest.json
ReportV1/tables/: asymmetry.csv  bottom_cross_lift.csv  bottom_lift.csv  chromosome_receivers.csv  cross_couplings.csv  grammar_carriers.csv  self_couplings.csv  top_cross_lift.csv  top_lift.csv
ReportV2/: KGENOME_REPORT_V2.html  KGENOME_REPORT_V2.md  report_v2_manifest.json
ReportV2/controls/: CONTROL_PROTOCOL.md  control_summary.csv  label_permutation_sample.csv
ReportV2/tables/: asymmetry_v2.csv  bottom_cross_lift_v2.csv  bottom_lift_v2.csv  chromosome_receivers_v2.csv  global_metrics.csv  grammar_carriers_v2.csv  self_cross_profile.csv  top_cross_lift_v2.csv  top_lift_v2.csv
ReportV3/: KGENOME_REPORT_V3.html  KGENOME_REPORT_V3.md  null_models.csv  report_v3_manifest.json
ReportV3/controls/: null_summary.csv
ReportV3/tables/: lowest_observed_minus_null.csv  null_joined.csv  top_null_accuracy.csv  top_observed_minus_null.csv
include/: kdna.h  kdna_dyn.h  kdna_kexp.h  kdna_kgen.h  kdna_kgenome.h  kdna_kglib.h  kdna_kgram.h  kdna_klib.h  kdna_kllib.h  kdna_kmap.h  kdna_kreg.h  kdna_krun.h  kdna_ksoa.h  kdna_kstream.h  kdna_kvar.h
kernels/: kdna_eval.cl  kdna_genesis.cl  kdna_ksieve.cl
python/: kdna.py
scripts/: apply_kglib_cmake_patch.ps1  apply_klang_library_v1_patch.ps1  apply_klang_v1_0_2_fix.ps1  apply_klang_v1_0_3_manifest_fix.ps1  apply_klang_v1_0_4_blank_manifest_fix.ps1  apply_klang_v1_0_5_pipeline_output_fix.ps1  apply_klang_v1_1_2_repair.ps1  apply_klang_v1_1_patch.ps1  apply_klang_v1_cmake_patch.ps1  apply_kstream_kfield_cmake_patch.ps1  apply_kstream_v1_0_1_fix.ps1  apply_kstream_v1_0_2_fix.ps1  kfield_matrix_from_manifest.ps1  klang_2x2_experiment.ps1  klang_full_v1_2.ps1  klang_library_from_suite.ps1  klang_suite_v1_2.ps1  kstream_project_and_gram.ps1
src/: kdna_cpu.c  kdna_kexp.c  kdna_kgen.c  kdna_kgram.c  kdna_klib.c  kdna_kmap.c  kdna_kreg.c  kdna_krun.c  kdna_ksoa.c  kdna_kvar.c  kdna_opencl.c
tests/: test_cpu_invariants.c  test_fasta_symbols.c  test_kexp.c  test_kexp_sweep.c  test_kgen.c  test_kgen_export_ksoa.c  test_kgen_opencl_diff.c  test_kgenome.c  test_kglib.c  test_kgram.c  test_klib.c  test_kmap.c  test_kreg.c  test_krun.c  test_ksieve.c  test_kstream.c  test_kvar.c  test_opencl_diff.c  test_reinject.c  test_scan_ksoa.c  test_symbol_gram.c
tools/: kdna_benchmark.c  kdna_demo.c  kdna_dynamics.c  kdna_experiment.c  kdna_fasta_symbols.c  kdna_field_null_matrix.c  kdna_genesis.c  kdna_genesis_export.c  kdna_genome_library.c  kdna_genome_matrix.c  kdna_gram.c  kdna_inspect.c  kdna_klang_library.c  kdna_library.c  kdna_manifest.c  kdna_null_matrix.c  kdna_probe.c  kdna_project.c  kdna_query.c  kdna_region.c  kdna_reinject.c  kdna_run.c  kdna_scan.c  kdna_stream_bytes.c  kdna_stream_conllu.c  kdna_stream_csv.c  kdna_stream_probe.c  kdna_stream_tokens.c  kdna_sweep.c  kdna_symbol_gram.c  kdna_variant_gram.c  kdna_variants.c
